<resources>
    <string name="app_name">Hooman Holding</string>
    <string name="logo">لوگو</string>
    <string name="quickAndEasy">آنی و سریع</string>
    <string name="powerInYourHand">قدرت دست توست!</string>
    <string name="login">ورود به اپلیکیشن</string>
    <string name="onAuthenticationError">اثر انگشت شما تایید نشد</string>
    <string name="enterByBiometric">ورود بایومتریک(اثر انگشت)</string>
    <string name="actionIsDone">انجام شد</string>
    <string name="bePatient">شکیبا باشید …</string>
    <string name="userName">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="visitorName">نام ویزیتور</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="basketNumber">شماره سبد</string>
    <string name="basketIsEmpty">سبد خالی است</string>
    <string name="buyBasket">سبد خرید</string>
    <string name="returnBasket">سبد مرجوعی</string>
    <string name="buyerName">نام مشتری</string>
    <string name="productsAreDownloading">در حال دریافت کالاها</string>
    <string name="clearCameraAndInFrontOfQr">دوربین گوشی را تمیز کنید و آن را مقابل تصویر قرار دهید</string>
    <string name="qrIsWrong">تصویر اسکن شده اشتباه است</string>
    <string name="listOfCustomer">لیست مشتریان</string>
    <string name="rePassword">تکرار رمز عبور</string>
    <string name="savePasswordAndFingerPrint">برای ذخیره ی رمز عبور و نام کاربری و ورود با اثر انگشت لطفا این گزینه را  فعال نمایید</string>
    <string name="receiveCode">دریافت کد تایید</string>
    <string name="receiveAgainCode">دریافت دوباره کد تایید</string>
    <string name="dismiss">بستن</string>
    <string name="remainingUntilResend">مانده تا ارسال مجدد</string>
    <string name="oldPassword">رمز عبور قدیم</string>
    <string name="changePassword">تغییر رمز</string>
    <string name="loginIsSuccess">ورود با موفقیت انجام شد</string>
    <string name="back">برگشت</string>
    <string name="minus">منها کردن</string>
    <string name="zero">0</string>
    <string name="plus">اضافه کردن</string>
    <string name="orderTracking">پیگیری سفارش</string>
    <string name="orderNumber">شماره سفارش</string>
    <string name="showOrderDetail">نمایش جزئیات سفارش</string>
    <string name="orderDetail">جزئیات سفارش</string>
    <string name="currentStep">مرحله ی فعلی</string>
    <string name="oldOrder">سفارشات قبلی</string>
    <string name="mobileNumber">شماره موبایل</string>
    <string name="checkNumber">شماره چک</string>
    <string name="checkDate">تاریخ چک</string>
    <string name="showAll">نمایش همه</string>
    <string name="sortBy">مرتب سازی بر اساس</string>
    <string name="productCallForPrice">استعلام قیمت کالاها</string>
    <string name="requestReturn">درخواست مرجوعی</string>
    <string name="callForPrice">استعلام قیمت</string>
    <string name="dashboard">داشبورد</string>
    <string name="cartable">کارتابل</string>
    <string name="phoneNumber">تلفن تماس</string>
    <string name="price">قیمت</string>
    <string name="count">تعداد</string>
    <string name="deleteBasket">حذف از سبد</string>
    <string name="addToBasket">اضافه کردن به سبد</string>
    <string name="addToReturn">اضافه کردن به مرجوعی</string>
    <string name="doYouWantToBasketDelete">آیا برای حذف ( %1$s ) مطمئن هستید؟</string>
    <string name="doYouWantToAllBasketDelete">آیا برای حذف کامل سبد مطمئن هستید؟</string>
    <string name="doYouWantToConfirmBasket">آیا برای اضافه کردن موارد انتخابی سبد مطمئن هستید؟</string>
    <string name="none">در حال بررسی</string>
    <string name="rejected">رد شده</string>
    <string name="reject">عدم تایید</string>
    <string name="confirmAndSend">تایید و ارسال</string>
    <string name="confirmed">تایید شده</string>
    <string name="packing">در حال جمع آوری</string>
    <string name="billing">فاکتور شده</string>
    <string name="loading">در حال ارسال</string>
    <string name="sent">ارسال شده</string>
    <string name="saveChange">ثبت تغییرات</string>
    <string name="rial">ریال</string>
    <string name="search">جستجو</string>
    <string name="newProductList">لیست کالاهای جدید</string>
    <string name="allProductList">لیست همه ی کالاها</string>
    <string name="showFactorList">مشاهده فاکتور لیستی</string>
    <string name="deleteAllBasket">حذف کل سبد</string>
    <string name="saveOrder">ثبت سفارش</string>
    <string name="productCode">کد کالا</string>
    <string name="productName">نام کالا</string>
    <string name="profile">ناحیه کاربری</string>
    <string name="aboutUs">درباره ما</string>
    <string name="showMyState">نمایش وضعیت من</string>
    <string name="shopName">نام فروشگاه</string>
    <string name="address">آدرس</string>
    <string name="shopAddress">آدرس فروشگاه</string>
    <string name="customerCode">کد مشتری</string>
    <string name="salesExpert">کارشناس فروش</string>
    <string name="signOut">خروج از حساب</string>
    <string name="activeDarkTheme">انتخاب تم نرم افزار</string>
    <string name="chooseStoreLocation">برای انتخاب لوکیشن کلیک کنید</string>
    <string name="setting">تنظیمات</string>
    <string name="contactUs">ارتباط با ما</string>
    <string name="doYouWantToExitAccount">آیا برای خروج از حساب کاربری مطمئن هستید؟</string>
    <string name="doYouWantToUpdateApp">نسخه جدید برنامه دردسترس است، لطفا بروزرسانی را انجام دهید</string>
    <string name="doYouWantToSubmitBasket">آیا برای ثبت سفارش مطمئن هستید؟</string>
    <string name="purchaseCountToDate">تعداد خرید امسال</string>
    <string name="discountAmount">مقدار تخفیف</string>
    <string name="discount">تخفیف</string>
    <string name="amountOwed">مبلغ بدهکاری</string>
    <string name="creditAmount">مبلغ بستانکاری</string>
    <string name="credit">بستانکار</string>
    <string name="debit">بدهکار</string>
    <string name="totalCredit">جمع بستانکاری</string>
    <string name="totalDebit">جمع بدهکاری</string>
    <string name="totalAmount">مبلغ کل</string>
    <string name="amount">مبلغ</string>
    <string name="diffDay">تاخیر به روز</string>
    <string name="notRecord">ثبت نشده</string>
    <string name="notPass">برگشتی</string>
    <string name="totalCashAmount">مبلغ کالاهای نقدی</string>
    <string name="fi">مبلغ واحد</string>
    <string name="historyOfCompany">تاریخچه مجموعه</string>
    <string name="collectionVideos">ویدیوهای مجموعه</string>
    <string name="play">پخش</string>
    <string name="check">چک</string>
    <string name="dependentCheck">چک سررسید نشده</string>
    <string name="introductionOfTheCollection">معرفی مجموعه</string>
    <string name="suggestions">انتقادات و پیشنهادات</string>
    <string name="doYouWantToExitApp">آیا برای خروج از برنامه مطمئن هستید؟</string>
    <string name="feedbackReport">گزارش مرجوعی</string>
    <string name="customerOrderReport">سفارش مشتری</string>
    <string name="returnCount">تعداد مرجوعی امسال</string>
    <string name="factorReport">گزارش فاکتور</string>
    <string name="customerBalanceReport">دفتر مشتری</string>
    <string name="customerBasketReturnReport">گزارش درخواست مرجوعی</string>
    <string name="billOfSale">صورتحساب فروش کالا و خدمات</string>
    <string name="shomarehSayadi">شماره صیادی</string>
    <string name="date">تاریخ</string>
    <string name="chooseDate">انتخاب تاریخ</string>
    <string name="orderDate">تاریخ سفارش</string>
    <string name="until">تا</string>
    <string name="from">از</string>
    <string name="dateFilter">فیلتر تاریخ :</string>
    <string name="pleaseChooseDateFrom">لطفا تاریخ شروع را انتخاب نمایید</string>
    <string name="pleaseChooseDateTo">لطفا تاریخ پایان را انتخاب نمایید</string>
    <string name="finalPrice">مبلغ نهایی</string>
    <string name="orderAmount">مبلغ ناخالص</string>
    <string name="detailFactor">جزییات فاکتور</string>
    <string name="pieces">عدد</string>
    <string name="createPDF">دریافت PDF گزارش</string>
    <string name="reportFromTo">گزارش از تاریخ %1$s تا تاریخ %2$s</string>
    <string name="customerCode2">کد مشتری : %1$s</string>
    <string name="description">توضیحات</string>
    <string name="subject">موضوع</string>
    <string name="remain">مانده</string>
    <string name="status">وضعیت</string>
    <string name="processToPDF">در حال ذخیره فایل pdf …</string>
    <string name="default_notification_channel_id">jpa</string>
    <string name="seller">فروشنده</string>
    <string name="buyer">خریدار</string>
    <string name="newIp">newIp</string>
    <string name="ipPassword">password</string>
    <string name="subjectIsEmpty">موضوع را وارد کنید</string>
    <string name="descriptionIsEmpty">توضیحات را وارد کنید</string>
    <string name="passwordIsInCorrect">رمز وارد شده اشتباه است</string>
    <string name="updateIsSuccess">بروزرسانی با موفقیت انجام شد</string>
    <string name="ipIsIncorrect">آدرس وارد شده صحیح نمیباشد</string>
    <string name="countInBox">تعداد در کارتن</string>
    <string name="countInPackage">تعداد در بسته</string>
    <string name="countInBoxAndPackage">تعداد در بسته : %1$s - تعداد در کارتن : %2$s</string>
    <string name="disableFeature">این قابلیت بزودی راه اندازی میشود</string>
    <string name="version">app version : %1$s</string>
    <string name="doYouForgetYourPassword">رمز ورود را فراموش کرده اید؟</string>
    <string name="internalMemoryIsFull">حافظه دستگاه شما برای دانلود نسخه جدید کافی نیست</string>
    <string name="startNewMessage">شروع پیام جدید</string>
    <string name="writeNewMessage">پیام خود را بگذارید…</string>
    <string name="isSending">در حال ارسال پیام …</string>
    <string name="exhibitionBasket">سبد نمایشگاه</string>
    <string name="factorOfCustomer">فاکتور مشتری</string>
    <string name="category">دسته بندی</string>
    <string name="chooseCategory">انتخاب دسته بندی</string>
    <string name="areYouSureToConfirmTheOrder">آیا برای تایید درخواست مطمئن هستید؟</string>
    <string name="areYouSureToRejectTheOrder">آیا برای رد درخواست مطمئن هستید؟</string>
<!--    <string name="finishStatus">بسته شده</string>-->
<!--    <string name="replyByAdminStatus">پاسخ پشتیبان</string>-->
<!--    <string name="replyByUser">پاسخ شما</string>-->
<!--    <string name="saveByUser">ارسال شده توسط شما</string>-->


    <string name="colon">:</string>
    <string name="enterChar">\n</string>
    <string name="space"> </string>

    <string name="iconDescription">iconDescription</string>

    <string name="lovorm">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>

</resources>