<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutBillingReturnTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/a_drawable_report_pdf_title">

    <TextView
        android:id="@+id/textViewFinalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iransans_medium"
        android:gravity="center"
        android:textColor="@color/a_textButton"
        android:textSize="@dimen/_6sdp"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewDiscountPrice"
        app:layout_constraintTop_toTopOf="parent"
        android:lines="1"
        android:text="@string/finalPrice"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        app:layout_constraintStart_toEndOf="@id/textViewFinalPrice"
        android:background="@color/a_textViewPrimary"/>

    <TextView
        android:id="@+id/textViewDiscountPrice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/iransans_medium"
        android:gravity="center"
        android:textColor="@color/a_textButton"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@id/textViewFinalPrice"
        app:layout_constraintEnd_toStartOf="@id/textViewAmountPrice"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        android:lines="1"
        android:text="@string/discount"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        app:layout_constraintStart_toEndOf="@id/textViewDiscountPrice"
        android:background="@color/a_textViewPrimary"/>

    <TextView
        android:id="@+id/textViewAmountPrice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/iransans_medium"
        android:gravity="center"
        android:textColor="@color/a_textButton"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@id/textViewDiscountPrice"
        app:layout_constraintEnd_toStartOf="@id/textViewDate"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        android:lines="1"
        android:text="@string/totalAmount"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        app:layout_constraintStart_toEndOf="@id/textViewAmountPrice"
        android:background="@color/a_textViewPrimary"/>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/iransans_medium"
        android:gravity="center"
        android:textColor="@color/a_textButton"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@id/textViewAmountPrice"
        app:layout_constraintEnd_toStartOf="@id/textViewNumber"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        android:lines="1"
        android:text="@string/date"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        app:layout_constraintStart_toEndOf="@id/textViewDate"
        android:background="@color/a_textViewPrimary"/>

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/iransans_medium"
        android:gravity="center"
        android:textColor="@color/a_textButton"
        android:textSize="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@id/textViewDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewFinalPrice"
        app:layout_constraintBottom_toBottomOf="@id/textViewFinalPrice"
        android:lines="1"
        android:text="@string/orderNumber"/>

</androidx.constraintlayout.widget.ConstraintLayout>
