<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/a_ic_logo"
            android:contentDescription="@string/logo" />


        <TextView
            android:id="@+id/textViewQuick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/quickAndEasy"
            android:textSize="@dimen/_9sdp"
            android:fontFamily="@font/iransans_light"
            android:textColor="@color/a_textView1"/>

        <TextView
            android:id="@+id/textViewPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewQuick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/powerInYourHand"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/iransans_bold"
            android:textColor="@color/a_textViewPrimary"/>

        <TextView
            android:id="@+id/textViewComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewPower"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_9sdp"
            android:fontFamily="@font/iransans_light"
            android:textColor="@color/a_textView1"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewComment"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardBackgroundColor="@color/a_cardView1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_10sdp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/a_ic_lock"
                    android:contentDescription="@string/logo" />

                <TextView
                    android:id="@+id/textViewLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/a_textView1"
                    android:textSize="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/login"
                    android:fontFamily="@font/iransans_light"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_600sdp"
            android:src="@drawable/vehicle"
            app:layout_constraintTop_toBottomOf="@id/cardViewLogin"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:scaleType="fitXY"
            android:contentDescription="@string/logo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
