<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.zarholding.jpacustomer.view.fragment.changepassword.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View
            android:id="@+id/viewCenter"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/a_ic_logo"
            android:contentDescription="@string/logo" />

        <ImageView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_600sdp"
            android:src="@drawable/vehicle"
            app:layout_constraintTop_toTopOf="@id/cardViewOldPassword"
            app:layout_constraintEnd_toStartOf="@id/viewCenter"
            android:layout_marginTop="@dimen/_30sdp"
            android:contentDescription="@string/logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/viewCenter"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/radius1"
            app:cardBackgroundColor="@color/color3">

            <EditText
                android:id="@+id/editTextOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:drawableTop="@drawable/a_ic_password"
                android:gravity="center"
                android:hint="@string/oldPassword"
                android:inputType="numberPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/primaryColor"
                android:textColor="@color/textColor"
                android:textSize="@dimen/editTextSize"
                android:text="@={viewModel.oldPassword}"
                android:fontFamily="@font/iransans_medium"
                android:drawablePadding="@dimen/_5sdp"
                android:background="@color/color3"
                android:autofillHints="password" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardViewOldPassword"
            app:layout_constraintStart_toStartOf="@id/cardViewOldPassword"
            app:layout_constraintEnd_toEndOf="@id/cardViewOldPassword"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/radius1"
            app:cardBackgroundColor="@color/color3">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:drawableTop="@drawable/a_ic_password"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/primaryColor"
                android:textColor="@color/textColor"
                android:textSize="@dimen/editTextSize"
                android:text="@={viewModel.password}"
                android:fontFamily="@font/iransans_medium"
                android:drawablePadding="@dimen/_5sdp"
                android:background="@color/color3"
                android:autofillHints="password" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cardViewPassword"
            app:layout_constraintStart_toStartOf="@id/cardViewOldPassword"
            app:layout_constraintEnd_toEndOf="@id/cardViewOldPassword"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/radius1"
            app:cardBackgroundColor="@color/color3">

            <EditText
                android:id="@+id/editTextRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:drawableTop="@drawable/a_ic_password"
                android:gravity="center"
                android:hint="@string/rePassword"
                android:inputType="numberPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColorHint="@color/primaryColor"
                android:textColor="@color/textColor"
                android:textSize="@dimen/editTextSize"
                android:text="@={viewModel.rePassword}"
                android:fontFamily="@font/iransans_medium"
                android:drawablePadding="@dimen/_5sdp"
                android:background="@color/color3"
                android:autofillHints="password" />

        </androidx.cardview.widget.CardView>


        <com.hoomanholding.applibrary.view.custom.JpaButton
            android:id="@+id/buttonChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cardViewOldPassword"
            app:layout_constraintTop_toBottomOf="@id/cardViewRePassword"
            app:layout_constraintEnd_toEndOf="@id/cardViewOldPassword"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/primaryColor"
            android:hint="@string/bePatient"
            app:cornerRadius="@dimen/radius1"
            android:textSize="@dimen/buttonTextSize"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            android:fontFamily="@font/iransans_bold"
            android:textColor="@color/buttonTextColor"
            android:text='@string/changePassword' />



    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>
